<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewModel"
            type="com.udacity.project4.viewModels.SaveReminderViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <EditText
            android:id="@+id/reminder_title_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/reminder_title_hint"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text="@={viewModel.reminderTitle}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/reminder_description_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:hint="@string/reminder_description_hint"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:lines="5"
            android:maxLines="5"
            android:minHeight="48dp"
            android:text="@={viewModel.reminderDescription}"
            app:layout_constraintTop_toBottomOf="@+id/reminder_title_field"
            tools:layout_editor_absoluteX="-11dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/reminder_description_field"
            tools:layout_editor_absoluteX="10dp">

            <TextView
                android:id="@+id/location_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="10dp"
                android:text="@string/reminder_location"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:drawableStartCompat="@drawable/ic_location_icon" />

            <TextView
                android:id="@+id/map_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@{viewModel.reminderLocation}"
                android:textColor="@color/black"
                android:textSize="16sp"
                tools:text="Alexandria" />
        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/details_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="20dp"
            android:clickable="true"
            android:focusable="true"
            app:tint="@color/white"
            android:backgroundTint="@color/pink"
            android:contentDescription="@string/save_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_save_icon" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
