<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="reminder"
            type="com.udacity.project4.data.localDataSource.ReminderData" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:background="@color/background_grey">

        <TextView
            android:id="@+id/reminder_title_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{reminder.title}"
            android:textAlignment="viewStart"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Say hi to Ahmed" />

        <TextView
            android:id="@+id/reminder_description_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@{reminder.description}"
            android:textAlignment="viewStart"
            android:textColor="@color/grey"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reminder_title_view"
            tools:text="don't forget to ask him about the concert" />

        <TextView
            android:id="@+id/reminder_location_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@{reminder.location}"
            android:textAlignment="viewEnd"
            android:textColor="@color/pink"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reminder_description_view"
            tools:text="Amstrdam Palace, Canada" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
