...
    <string name="data_fields_empty">Please fill all the data</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="reminder_location">Reminder Location</string>
    <string name="error_save_fab">Please fill all the data</string>
    <string name="reminder_is_added">Reminder added</string>
</resources>
