...
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:itemCount="5"
            tools:listitem="@layout/reminder_item_layout"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/list_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="30dp"
            app:tint="@color/white"
            app:backgroundTint="@color/pink"
...
